[gd_scene load_steps=14 format=4 uid="uid://clevel1advent"]

[ext_resource type="Script" uid="uid://bvetmboyhxuho" path="res://Scenes/Levels/Level1_Adventure/Level1.gd" id="1_level"]
[ext_resource type="Texture2D" uid="uid://brwots7x3rhye" path="res://Assets/Art/HighForest/Assets/Tiles.png" id="2_tiles"]
[ext_resource type="Texture2D" uid="uid://crjfjiyaqtnk2" path="res://Assets/Art/HighForest/Background/Background.png" id="3_bg"]
[ext_resource type="Script" uid="uid://7t4no0mld71g" path="res://Scenes/CommonScript/PlayerSpawn.gd" id="4_spawn"]
[ext_resource type="PackedScene" uid="uid://bxfeuo2sxqism" path="res://Scenes/Levels/Components/TreasureChest.tscn" id="5_chest"]
[ext_resource type="PackedScene" uid="uid://dh5collect001" path="res://Scenes/Levels/Components/Collectible.tscn" id="6_coin"]
[ext_resource type="PackedScene" uid="uid://dh5portal001" path="res://Scenes/Levels/Components/Portal.tscn" id="7_portal"]
[ext_resource type="PackedScene" uid="uid://bw51dsuf1pism" path="res://Scenes/Levels/Components/LevelHUD.tscn" id="8_hud"]
[ext_resource type="PackedScene" uid="uid://cforestboar01" path="res://Scenes/Characters/Enemies/ForestBoar/ForestBoar.tscn" id="9_boar"]
[ext_resource type="PackedScene" uid="uid://cforestbee01" path="res://Scenes/Characters/Enemies/ForestBee/ForestBee.tscn" id="10_bee"]
[ext_resource type="PackedScene" uid="uid://d4fp6s833uuea" path="res://Scenes/Characters/Enemies/ForestSnail/ForestSnail.tscn" id="11_snail"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_forest"]
texture = ExtResource("2_tiles")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0

[sub_resource type="TileSet" id="TileSet_forest"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_forest")

[node name="Level1" type="Node2D" groups=["level"]]
script = ExtResource("1_level")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(640, 200)
scale = Vector2(3, 3)
texture = ExtResource("3_bg")

[node name="TileMap" type="Node2D" parent="."]

[node name="Ground" type="TileMapLayer" parent="TileMap" groups=["tilemap"]]
tile_map_data = PackedByteArray("AAD8/xkAAAABAAAA/f8ZAAAAAQAAAP7/GQAAAAEAAAApABsAAAABAAAAKgAbAAAAAQACABsAAAABAAAAAwAbAAAAAQAAACgAGwAAAAcAGwAAAAEAAAAIABsAAAABAAAACQAAAA0AGwAAAAEAAAAOABsAAAABAAAADwAAABMAGwAAAAEAAAAUABsAAAABAAAAFQAAABkAGwAAAAEAAAAaABsAAAABAAAAGwAAAB8AGwAAAAEAAAAgABsAAAABAAAAIQAAACUAGwAAAAEAAAAmABsAAAABAAAAJwAAAP3/GgAAAAEAAAD+/xoAAAABAAAA//8aAAAAAQAAAAAZAAAAAQAAABIAFAAAAAEAAAACABkAAAABAAAAAwAZAAAAAQAAAAQAGQAAAAEAAAALABkAAAABAAAAEQAUAAAAAAAIABkAAAABAAAACQAZAAAAAQAAAAoAAAAOABMAAAABAAAAD4ATAAAAAQAAABAAEwAAAAEAAAAXABMAAAAUABMAAAABAAAAFQATAAAAAQAAABYAAAANABQAAAABAAAADgAUAAAAAQAAAA8AFAAAAAEAAAAQABQAAAATABQAAAABAAAAFAAUAAAAAQAAABU=")
tile_set = SubResource("TileSet_forest")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)
zoom = Vector2(2, 2)
limit_left = 0
limit_bottom = 500

[node name="PlayerSpawn" type="Node2D" parent="." groups=["player_spawn"]]
position = Vector2(32, 400)
script = ExtResource("4_spawn")

[node name="Platforms" type="Node2D" parent="."]

[node name="Treasures" type="Node2D" parent="."]

[node name="TreasureChest1" parent="Treasures" instance=ExtResource("5_chest")]
position = Vector2(200, 400)

[node name="TreasureChest2" parent="Treasures" instance=ExtResource("5_chest")]
position = Vector2(400, 280)
chest_size = "big"

[node name="TreasureChest3" parent="Treasures" instance=ExtResource("5_chest")]
position = Vector2(600, 350)

[node name="TreasureChest4" parent="Treasures" instance=ExtResource("5_chest")]
position = Vector2(800, 250)
chest_size = "big"

[node name="TreasureChest5" parent="Treasures" instance=ExtResource("5_chest")]
position = Vector2(1000, 400)

[node name="Collectibles" type="Node2D" parent="."]

[node name="Coin1" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(120, 400)

[node name="Coin2" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(180, 380)

[node name="Coin3" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(300, 320)

[node name="Coin4" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(350, 300)

[node name="Coin5" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(500, 320)

[node name="Coin6" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(550, 300)

[node name="Coin7" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(700, 280)

[node name="Coin8" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(750, 260)

[node name="Coin9" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(900, 300)

[node name="Coin10" parent="Collectibles" instance=ExtResource("6_coin")]
position = Vector2(950, 280)

[node name="Enemies" type="Node2D" parent="."]

[node name="Boar1" parent="Enemies" instance=ExtResource("9_boar")]
position = Vector2(250, 430)

[node name="Boar2" parent="Enemies" instance=ExtResource("9_boar")]
position = Vector2(650, 430)

[node name="Bee1" parent="Enemies" instance=ExtResource("10_bee")]
position = Vector2(350, 280)

[node name="Bee2" parent="Enemies" instance=ExtResource("10_bee")]
position = Vector2(750, 230)

[node name="Snail1" parent="Enemies" instance=ExtResource("11_snail")]
position = Vector2(450, 430)

[node name="Snail2" parent="Enemies" instance=ExtResource("11_snail")]
position = Vector2(850, 430)

[node name="Portal" parent="." instance=ExtResource("7_portal")]
position = Vector2(1100, 400)

[node name="LevelHUD" parent="." instance=ExtResource("8_hud")]
